fix(side-panel): reduce close button spacing

--- a/packages/cloud-cognitive/src/components/SidePanel/_side-panel.scss
+++ b/packages/cloud-cognitive/src/components/SidePanel/_side-panel.scss
@@ -327,16 +327,22 @@ $action-set-block-class: #{$pkg-prefix}--action-set;
       padding: 0;
       color: $text-01;
     }
-    .#{$carbon-prefix}--btn.#{$block-class}__close-button {
+
+    .#{$block-class}__close-button {
       position: absolute;
       z-index: 5;
       top: $spacing-03;
-      right: $spacing-05;
+      right: $spacing-03;
       display: flex;
       align-items: center;
       justify-content: center;
       background-color: $ui-01;
     }
+
+    .#{$block-class}__close-button--without-title {
+      right: $spacing-05;
+    }
+
     .#{$carbon-prefix}--btn.#{$block-class}__close-button
       .#{$carbon-prefix}--btn__icon {
       margin: 0;
